# pipelines-experiments

./: README.md  pyproject.toml
data/: test.parquet
notebooks/: experimentos.ipynb  fetch_data.ipynb  split_dataset.ipynb
pipelines/: best_pipeline.pkl
src/: feature_engineering.py
